[package]
name = "time_indexing"
version = "0.2.0"
rust-version = "1.75.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "=1.0.203", default-features = false }
hdk = { version = "=0.4.0-dev.19", features = ["encoding"] }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-4.0-dev.20" }

#base64 = {version = "0.13"}
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
