[package]
name = "time_indexing"
version = "0.2.0"
rust-version = "1.75.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "=1.0.219", default-features = false }
holochain_serialized_bytes = "=0.0.56"
hdk = { version = "=0.6.0-dev.21", features = ["encoding"] }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-6.0" }

#base64 = {version = "0.13"}
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
